--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>elm-snake: A Snake clone, written in Elm</title>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -12,6 +13,6 @@
   <body>
     <main />
 
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>
